# CORE                                                                                     #
#   Add here everything which connected to the core: (spells,groups,maps etc..)            #
#                                                                                          #
############################################################################################

~>XX.07.2012:

- Fix shadowfiend.
- Core/Spells: Dont remove auras on stance change if the stance you are moving to is also allowed by the spell. (Merge to TC (Apr 14, 2012))
- Core/Spells: Fixed Bloodworm's heal effect and damage.
- Battlegrounds/WSG: Fixed door LoS in Warsong Gulch.
- Core/BG: Fix a logic mistake in ResetStat timer.
- Core/BG: When starting a battleground teleport the player to start location if it goes outside of the allowed "waiting" area (for example, getting out of the "bubble" in EotS).
- Fixs Solace of the Defeated and Solace of the Fallen
- Core/Spells: Add 45 seconds proc cooldown to Blackened Naaru Silver.
- Player/Items: Fix the item durations when the item is stored in a bag different than the default backpack.
- Core/Spells: Reapply glyph bonuses that depend on stance when you shapeshift into that instance.
- Core/Spells: Prevent Siphon Life from proccing on Corruption apply.
- Core/Spells: Fixed Recklessness charges being dropped twice.
- Core/Warden: Workaround for an OpenSSL bug in the ARC4 stream cipher initialization that causes crashes on some OS.
- Gnomeregan Pride misc fix. (By Diton xD!)
- Absorbs vs Inner etc...
- Core/Movement: Changed casting check in TargetedMovementGenerator to be able to freely manipulate cast+move interaction in scripts.
- Core/Loading: Make GameObject loot loading faster by removing an unneeded call to an expensive method.
- Core/Spells: You should not be able to cast Create Healthstone if you already have one in your inventory.
- Core/Spells: Apply Lifebloom's final bloom bonus from Empowered Rejuvenation also on expire.