@@ -62,9 +62,12 @@ bool HomeMovementGenerator<Creature>::Update(Creature &owner, const uint32 /*tim
 
 void HomeMovementGenerator<Creature>::Finalize(Creature& owner)
 {
+    // sometimes movement wont be finished, clear UNIT_STAT_EVADE anyways
+    // TODO: why?
+    owner.ClearUnitState(UNIT_STATE_EVADE);
+
     if (arrived)
     {
-        owner.ClearUnitState(UNIT_STATE_EVADE);
         owner.SetWalk(true);
         owner.LoadCreaturesAddon(true);
         owner.AI()->JustReachedHome();
